sql injection detect and  uppercased fields

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 
-cерверный ts не видит типов генерированных  --typeRoots  --verbose
-
+ 
+прогнать все через преттиер
 
 генерировать типы для всех записей со всеми полями?
 генерировать типы для enum из БД?
